# one-liners

./: Anchor.toml  LICENSE  README.md
app/: package.json
app/src/: App.vue  main.css  routes.js
app/src/api/: fetch-snippets.js  get-snippet.js  index.js  send-snippet.js
app/src/components/: PageHome.vue  PageLanguages.vue  PageNotFound.vue  PageProfile.vue  PageSnippet.vue  PageUsers.vue  SnippetCard.vue  SnippetForm.vue  SnippetList.vue  SnippetSearch.vue  TheSidebar.vue
app/src/composables/: useWorkspace.js
app/src/models/: Snippet.js  index.js
programs/code-snippets/: Cargo.toml
programs/code-snippets/src/: lib.rs
programs/code-snippets/src/instructions/: mod.rs  snippet_actions.rs
programs/code-snippets/src/state/: mod.rs  snippet.rs
tests/: code-snippets.ts
